bpo-44570: Fix line tracing for forwards jumps to duplicated tails (GH-27068)